// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

// XXX retaining package to avoid breaking existing configurations.
package foundation.runtime.kubernetes;

option go_package = "namespacelabs.dev/foundation/internal/runtime/kubernetes/client";

import "framework/kubernetes/kubeclient/staticconfig.proto";
import "schema/environment.proto";
import "schema/package.proto";

message HostEnv {
    string                                                  kubeconfig            = 1;
    string                                                  context               = 2;  // If empty, uses default context.
    bool                                                    incluster             = 3;
    string                                                  bearer_token_provider = 4;
    string                                                  provider              = 5;  // If set, relies on the specified provider to produce a kube config.
    foundation.framework.kubernetes.kubeclient.StaticConfig static_config         = 6;
    string                                                  ingress_class         = 7;
}

message DeploymentPlanning {
    repeated foundation.schema.Label default_node_selector  = 1;
    repeated OverrideNodeSelector    override_node_selector = 2;

    message OverrideNodeSelector {
        foundation.schema.PackageRef deployable_package_ref = 1;
        repeated foundation.schema.Label node_selector      = 2;
    }
}